# test-cpp2

./: CMakeLists.txt  test-cpp2.qbs
src/: src.qbs
src/app/: CMakeLists.txt  frame.h  main.cpp  message.cpp  message.h  optional.h  result.cpp  udplink.cpp  udplink.h
src/client/: client.cpp  client.h  client.qbs  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: connection.cpp  connection.h  core.qbs  message.h  result.h  tcpsocket.cpp  tcpsocket.h
src/server/: connection.cpp  connection.h  main.cpp  server.cpp  server.h  server.qbs  server_linux.cpp  server_mac.cpp  server_p.h  tcputils.cpp  tcputils.h
